Utilize handshakes instead of is_thread_fully_suspended

XMLWordPrintable

    • b22

      Converting all possible use-cases of is_thread_fully_suspended to handshakes will make it easier to implement suspend/resume itself with handshakes.
      The use-cases of is_thread_fully_suspended is essentially handshakes but via S/R protocol.

            Assignee:
            Robbin Ehn
            Reporter:
            Robbin Ehn
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: